# tidy-claude

./: .gitignore  .markdownlint.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_PLAN.md  README.md  SECURITY.md  migration_stats.json  pyproject.toml  rust-migration-cc.jsonl  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
.migration/: progress.md  rust-migration-pi.jsonl  stats.jsonl
migration_tracking/: checkpoints.md  usage_log.csv
src/: cli.rs  config.rs  error.rs  helpers.rs  lib.rs  main.rs  ops.rs  state.rs
src/tidy_claude/: __init__.py  cli.py  config.py  helpers.py  ops.py  state.py
tests/: backup_parity.rs  cli_integration.rs  conftest.py  parity.sh  test_cleanup.py  test_config_cli.py  test_helpers.py
tests/snapshots/: backup_parity__backup_tree_structure_matches_snapshot.snap
