[package]
name = "tidy-claude"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Backup, sync, and clean up Claude Code configuration across machines"
repository = "https://github.com/sabbasth/tidy-claude"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

anyhow = "1.0"
thiserror = "1.0"


[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
insta = { version = "1.38", features = ["json"] }
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "tidy-claude"
path = "src/main.rs"
