[package]
name = "tidy-claude"
version = "1.0.0"
edition = "2021"
description = "Backup, sync, and clean up Claude Code configuration"
license = "MIT"

[[bin]]
name = "tidy-claude"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs_extra = "1"
dialoguer = "0.11"
thiserror = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
filetime = "0.2"
