[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidy-claude"
version = "0.1.0"
description = "Backup, sync, and clean up Claude Code configuration"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["click>=8.0", "simple-term-menu>=1.6"]

[project.scripts]
tidy-claude = "tidy_claude.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tidy_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
